fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -325,13 +325,12 @@ hr {
     .middle2,
     .middle h4 {
         font-size: 16px;
-        padding-bottom: 15px;
+        padding-bottom: 35px;
         border: none;
     }
     .third {
         width: 90vw;
         padding-top: 25px;
-        padding-bottom: 25px;
         border: none;
     }
     .paragraph_heading {
